lms_filter/lms_filter/logs/hls_run_csim_16540.backup.log
  **** HLS Build v2025.2 6295257
INFO: [HLS 200-2005] Using work_dir D:/VHDl/ZYNQ/lms_filter/lms_filter 
INFO: [HLS 200-2176] Writing Vitis IDE component file D:/VHDl/ZYNQ/lms_filter/lms_filter/vitis-comp.json
INFO: [HLS 200-10] Creating and opening component 'D:/VHDl/ZYNQ/lms_filter/lms_filter'.
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.amd.com/access/sources/dita/topic?Doc_Version=2025.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-2174] Applying component config ini file hls_config.cfg
INFO: [HLS 200-1465] Applying config ini 'syn.file=../lms_filter.cpp' from hls_config.cfg(7)
INFO: [HLS 200-10] Adding design file 'D:/VHDl/ZYNQ/lms_filter.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../lms_filter.h' from hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file 'D:/VHDl/ZYNQ/lms_filter.h' to the project
INFO: [HLS 200-1465] Applying config ini 'tb.file=../lms_filter_tb.cpp' from hls_config.cfg(9)
INFO: [HLS 200-10] Adding test bench file 'D:/VHDl/ZYNQ/lms_filter_tb.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'flow_target=vivado' from hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.amd.com/access/sources/dita/topic?Doc_Version=2025.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying config ini 'part=xc7z007sclg400-1' from hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7z007s-clg400-1'
INFO: [HLS 200-1465] Applying config ini 'clock=10ns' from hls_config.cfg(10)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying config ini 'package.output.format=ip_catalog' from hls_config.cfg(5)
INFO: [HLS 200-2176] Writing Vitis IDE component file D:/VHDl/ZYNQ/lms_filter/lms_filter/vitis-comp.json
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [HLS 200-2191] C-Simulation will use clang-16 as the compiler
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../../lms_filter_tb.cpp in debug mode
   Compiling ../../../../../lms_filter.cpp in debug mode
In file included from ../../../../../lms_filter.cpp:7:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\ap_int.h:10:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\etc/ap_common.h:668:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\etc/ap_private.h:68:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\hls_half.h:26:
In file included from C:/AMDDesignTools/2025.2/Vitis/include/etc/hls_half_fpo.h:19:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\hls_fpo.h:140:
In file included from C:/AMDDesignTools/2025.2/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/AMDDesignTools/2025.2/Vitis/include\gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/AMDDesignTools/2025.2/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../../lms_filter.cpp:62:41: error: call to implicitly-deleted default constructor of 'union (unnamed union at ../../../../../lms_filter.cpp:62:9)'
        union {float f; ap_uint<32> u;} conv;           // declares a union that can hold either a float (conv.f) or a 32 bit uint (conv.u), occupies the same space in memory so can be interpreted as each other
                                        ^
../../../../../lms_filter.cpp:62:37: note: default constructor of '(unnamed union at ../../../../../lms_filter.cpp:62:9)' is implicitly deleted because variant field 'u' has a non-trivial default constructor
        union {float f; ap_uint<32> u;} conv;           // declares a union that can hold either a float (conv.f) or a 32 bit uint (conv.u), occupies the same space in memory so can be interpreted as each other
                                    ^
1 warning and 1 error generated.
mingw32-make: *** [csim.mk:97: obj/lms_filter.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: CSIM Failed
INFO: [HLS 200-112] Total CPU user time: 1 seconds. Total CPU system time: 2 seconds. Total elapsed time: 8.015 seconds; peak allocated memory: 134.762 MB.
